- Added hover over colour for activity li
- Removed margin on bottom of avatars in li
- Removed sections in sections on the front page - a section shouldn't be in another
- Removed outside html on front page - each should be in each loop as discussed so can have better layout control
- Removed 'status' on footer and sidebar calls as it won't have child themes we don't need to use footer-status and such - no plans for different footers or headers like that in design

06/12/11 tam
- Removed welcome message lets use just activity
- Redirected to index.php for activity - willing to work out later just getting done
- Added tails to speech

08/12/11 hugo
- First pass at adding custom nav
- Added back custom nav markup with do actions
- functions.php provides an add_action function to build user profile nav elements
- Added basic styles for dropdowns - need third level positioning sorting out
- BP buddybar removed in functions.php
- Not sure what happens with wp-admin-bar?
- This is work in progress requiring further attention

08/12/11 tam
- Changed front to be sign in / sign up directs to the registration if on (must have if on check wasn't there previously)
- Must run WP 3.3 and BuddyPress 1.6 trunk to see this all work
- Fixed up footer widgets and put back in default naming to get done for now

09/12/11 tam
- Added padding and reduced width on all wrapper elements
- Moved date to the header with a float right and float left on header
- Fixed some responsive issues

10/12/11 tam
- Adding back in content-wrapper removing container
- Fixing back in content-home as did have a styling attached
- Put in activate.php having just empty file isn't great
- Made status-signup have article as index.php used that seems more logical than section

11/12/11 tam
- Better styling on boxes
- New background for demo
- Better avatar styling
- Tightened up spacing
- Start of sign up form styling
- New icons with higher contrast