@@ -13,9 +13,29 @@
 
 			<?php if ( !is_user_logged_in() ) : ?>
 				<div id="content-home" role="main">
-					<article class="status-signup">
+					<article class="status-signup clearfix">
+						<section id="signup-login">
 						<?php do_action( 'bp_before_sidebar_login_form' ) ?>
 
+							<h2>Sign in</h2>
+								<form name="login-form" id="sidebar-login-form" class="standard-form clearfix" action="<?php echo site_url( 'wp-login.php', 'login_post' ) ?>" method="post">
+									<label><?php _e( 'Username', 'buddypress' ) ?></label>
+									<input type="text" name="log" id="sidebar-user-login" class="input" value="<?php if ( isset( $user_login) ) echo esc_attr(stripslashes($user_login)); ?>" tabindex="97" />
+
+									<label><?php _e( 'Password', 'buddypress' ) ?></label>
+									<input type="password" name="pwd" id="sidebar-user-pass" class="input" value="" tabindex="98" />
+
+									<p class="forgetmenot clearfix"><label><input name="rememberme" type="checkbox" id="sidebar-rememberme" value="forever" tabindex="99" /> <?php _e( 'Remember Me', 'buddypress' ) ?></label></p>
+
+									<?php do_action( 'bp_sidebar_login_form' ) ?>
+									<input type="submit" name="wp-submit" id="sidebar-wp-submit" value="<?php _e( 'Log In', 'buddypress' ); ?>" tabindex="100" class="clearfix"/>
+									<input type="hidden" name="testcookie" value="1" />
+								</form>
+
+								<?php do_action( 'bp_after_sidebar_login_form' ) ?>
+						</section>
+						<section id="signup-register">
+							<h2>... or register</h2>
 								<?php if ( bp_get_signup_allowed() ) : ?>
 
 									<p id="login-text">
@@ -25,22 +45,8 @@
 									</p>
 
 								<?php endif; ?>
-
-								<form name="login-form" id="sidebar-login-form" class="standard-form" action="<?php echo site_url( 'wp-login.php', 'login_post' ) ?>" method="post">
-									<label><?php _e( 'Username', 'buddypress' ) ?><br />
-									<input type="text" name="log" id="sidebar-user-login" class="input" value="<?php if ( isset( $user_login) ) echo esc_attr(stripslashes($user_login)); ?>" tabindex="97" /></label>
-
-									<label><?php _e( 'Password', 'buddypress' ) ?><br />
-									<input type="password" name="pwd" id="sidebar-user-pass" class="input" value="" tabindex="98" /></label>
-
-									<p class="forgetmenot"><label><input name="rememberme" type="checkbox" id="sidebar-rememberme" value="forever" tabindex="99" /> <?php _e( 'Remember Me', 'buddypress' ) ?></label></p>
-
-									<?php do_action( 'bp_sidebar_login_form' ) ?>
-									<input type="submit" name="wp-submit" id="sidebar-wp-submit" value="<?php _e( 'Log In', 'buddypress' ); ?>" tabindex="100" />
-									<input type="hidden" name="testcookie" value="1" />
-								</form>
-
-								<?php do_action( 'bp_after_sidebar_login_form' ) ?>
+							
+						</section>
 					</article>
 				</div><!-- / #content -->
 			<?php endif; ?>
