@@ -9,25 +9,6 @@
 
 ?>
 
-<div class="item-list-tabs" id="subnav" role="navigation">
-	<ul>
-
-		<?php bp_get_options_nav(); ?>
-
-		<li id="blogs-order-select" class="last filter">
-
-			<label for="blogs-all"><?php _e( 'Order By:', 'buddypress' ); ?></label>
-			<select id="blogs-all">
-				<option value="active"><?php _e( 'Last Active', 'buddypress' ); ?></option>
-				<option value="newest"><?php _e( 'Newest', 'buddypress' ); ?></option>
-				<option value="alphabetical"><?php _e( 'Alphabetical', 'buddypress' ); ?></option>
-
-				<?php do_action( 'bp_member_blog_order_options' ); ?>
-
-			</select>
-		</li>
-	</ul>
-</div><!-- .item-list-tabs -->
 
 <?php do_action( 'bp_before_member_blogs_content' ); ?>
 
