@@ -9,24 +9,7 @@
 
 ?>
 
-<div class="item-list-tabs no-ajax" id="subnav" role="navigation">
-	<ul>
-		<?php bp_get_options_nav() ?>
 
-		<li id="forums-order-select" class="last filter">
-
-			<label for="forums-order-by"><?php _e( 'Order By:', 'buddypress' ); ?></label>
-			<select id="forums-order-by">
-				<option value="active"><?php _e( 'Last Active', 'buddypress' ); ?></option>
-				<option value="popular"><?php _e( 'Most Posts', 'buddypress' ); ?></option>
-				<option value="unreplied"><?php _e( 'Unreplied', 'buddypress' ); ?></option>
-
-				<?php do_action( 'bp_forums_directory_order_options' ); ?>
-
-			</select>
-		</li>
-	</ul>
-</div><!-- .item-list-tabs -->
 
 <?php
 
