@@ -9,13 +9,7 @@
 
 ?>
 
-<div class="item-list-tabs no-ajax" id="subnav" role="navigation">
-	<ul>
 
-		<?php bp_get_options_nav(); ?>
-
-	</ul>
-</div><!-- .item-list-tabs -->
 
 <?php
 
