@@ -9,8 +9,6 @@
 ?>
 
 <?php get_header( 'buddypress' ) ?>
-<div id="content-wrap">
-	<div id="content">
 
 			<?php do_action( 'bp_before_member_settings_template' ); ?>
 
@@ -20,31 +18,12 @@
 
 			</div><!-- #item-header -->
 
-			<div id="item-nav">
-				<div class="item-list-tabs no-ajax" id="object-nav" role="navigation">
-					<ul>
-
-						<?php bp_get_displayed_user_nav(); ?>
-
-						<?php do_action( 'bp_member_options_nav' ); ?>
-
-					</ul>
-				</div>
-			</div><!-- #item-nav -->
-
+		<div id="content">
 			<div id="item-body" role="main">
 
 				<?php do_action( 'bp_before_member_body' ); ?>
 
-				<div class="item-list-tabs no-ajax" id="subnav">
-					<ul>
-
-						<?php bp_get_options_nav(); ?>
-
-						<?php do_action( 'bp_member_plugin_options_nav' ); ?>
-
-					</ul>
-				</div><!-- .item-list-tabs -->
+			
 
 				<h3><?php _e( 'General Settings', 'buddypress' ); ?></h3>
 
@@ -80,11 +59,8 @@
 
 			<?php do_action( 'bp_after_member_settings_template' ); ?>
 
-		</div><!-- / #content-wrap -->
 	</div><!-- #content -->
 
-<?php if($profile_sidebar == true) {// do we want the sidebar in user profiles? ?>
 <?php get_sidebar( 'buddypress' ); ?>
-<?php } ?>
 
 <?php get_footer( 'buddypress' ) ?>
