@@ -1,7 +1,9 @@
 <?php do_action( 'bp_before_sidebar' ) ?>
 
 <div id="sidebar" role="complementary">
+	<div class="widget">
 Need to decide what goes here.....
+</div>
 <!--
 	<?php do_action( 'bp_inside_before_sidebar' ) ?>
 
