@@ -101,3 +101,8 @@ Tags: buddypress, two-column, fixed-width
 - Tightened up spacing
 - Start of sign up form styling
 - New icons with higher contrast
+
+- Better sign up form on front
+- Merged activity / profile menus so it's cohesive in header - not final styling
+- Created on global header for all profiles - not final styling
+- Added start of sidebar widget styling - not final styling
